# waebric

./: COPYING  Makefile.am  TODO  configure.ac  waebric.pc.in
doc/: Makefile  sdf.sty  waebric.sty  waebric.tex
scripts/: Makefile.am  preproc-waebric.sh.src  waebric-ast.sh.src  waebric.sh.src  waebricb.sh.src  waebricc.sh.src  wb.sh.src  wbc.sh  wbc.sh.src
serve/: Makefile.am  REPL.java  REPL.wae  REPLServlet.java  waebric-serve.sh.src
serve/root/: Makefile.am  waebric.css
serve/root/WEB-INF/: Makefile.am  web.xml
serve/root/WEB-INF/classes/: Makefile.am
serve/root/WEB-INF/lib/: Makefile.am
serve/root/blueprint/: Makefile.am
serve/root/pretty/: Makefile.am
spec/: Build-Waebric.c  Build-Waebric.eqs  Check-Waebric.c  Check-Waebric.eqs  Compile-Waebric.c  Compile-Waebric.eqs  Import-Waebric.c  Import-Waebric.eqs  Java-15.trm.tbl  Makefile.am  Makefile.in  Run-Waebric.c  Run-Waebric.eqs  Waebric.trm.tbl  meta.actions
spec/languages/waebric/all/: Waebric.sdf
spec/languages/waebric/check/: Check.asf  Check.sdf  Waebric.asf  Waebric.sdf  XHTML.asf  XHTML.sdf
spec/languages/waebric/compile/: Compile.asf  Compile.sdf  IdConversion.asf  IdConversion.sdf  Waebric.asf  Waebric.sdf
spec/languages/waebric/extract/: Summarize.asf  Summarize.sdf  Waebric.asf  Waebric.sdf
spec/languages/waebric/format/: Format-Module.asf  Format-Module.sdf  Waebric.sdf
spec/languages/waebric/import/: Resolve.asf  Resolve.sdf  Waebric.asf  Waebric.sdf
spec/languages/waebric/open/: Waebric.sdf
spec/languages/waebric/run/: Eval.asf  Eval.asf.orig  Eval.sdf  IntermediateMarkup.sdf  Markup.sdf  Markup2XML.asf  Markup2XML.sdf  Result.sdf  Run-Formatted.sdf  Tidy.asf  Tidy.sdf  Values.sdf  Waebric.asf  Waebric.sdf
spec/languages/waebric/syntax/: Embedding.sdf  Expressions.sdf  Functions.sdf  Markup.sdf  Modules.sdf  Predicates.sdf  Sites.sdf  Statements.sdf
spec/languages/xml/format/: Format.asf  Format.sdf  XML.sdf
spec/languages/xml/syntax/: XML.sdf
spec/terms/: Hello.wae  a.trm  alava.trm  alava2.trm  all.trm  arity.trm  attrs.trm  block.trm  blog.trm  boolean.trm  bug.trm  commen.trm  convert.trm  css.trm  demo.trm  demo.wae  doc.trm  dom-ex.trm  each.trm  eval-markup.trm  eval.trm  ext.trm  fix.trm  id2name.trm  if.trm  imports.trm  inline.trm  java.trm  javascript.trm  lava-xml.trm  lava.trm  ldta.trm  markup-to-content.trm  markup.trm  method.trm  modname.trm  new.trm  pp-sim.trm  pp.trm  ppxml.trm  (+16 more)
test/demo/: layout.wae  menus.wae  swfobject.wae
test/lava/: Makefile  abon.java  bla  lava.java
test/lava/site/: abonnementen.html  brandendepen.html  index.html  kopij.html  overlava.html  verhalen.html
test/lava/site/css/: lava.css
test/test/: check.sh  cyclic.wae  middlecycle.wae  regress.sh  run.sh  test059.wae  test093.wae  test095.wae  test096.wae  test097.wae  test098.wae  test099.wae  test100.wae  transcyclic.wae
test/test/imports/: cycle.wae  imp.wae  leafcyclic.wae  middle.wae  mod.wae  trans.wae
test/test/output/: cycle.ast  cycle.err  cyclic.ast  cyclic.err  cyclic.html  imp.ast  imp.err  imp.html  test001.ast  test001.err  test002.ast  test002.err  test002.out  test003.ast  test003.err  test003.out  test004.ast  test004.err  test004.out  test005.ast  test005.err  test005.out  test006.ast  test006.err  test006.html  test007.ast  test007.err  test007.out  test008.ast  test008.err  test008.html  test009.ast  test009.err  test009.html  test010.ast  test010.err  test010.out  test011.ast  test011.err  test012.ast  (+239 more)
test/test/subdir/: mod2.wae
